update modal content, update about bio, remove nav cv links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a target="_blank" class="resume-link" aria-label="Download Resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Download CV <i class="fa-solid fa-download"></i></a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -44,7 +43,6 @@
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a target="_blank" class="resume-link" aria-label="Download Resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Download CV <i class="fa-solid fa-download"></i></a></li>
             <li><a href="#projects" >Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -70,12 +68,12 @@
             <div class="about-container">
                 <div class="about-bio">
                     <p>
-                    Hello World! My name is Deyan and I am a Front-end Software Engineer. I am originally from Bulgaria and have lived in the United States since 2012.<br><br>
-                    I specialize in developing SPA applications with React and JavaScript, but my skillset extends well beyond that.
-                    I am also more than capable of producing high quality back-end work when needed, as demonstrated by my work experience and personal projects. <br> <br>
-                    I have always maintained a "Never get comfortable, always challenge yourself" mentality, which has helped me grow 
-                    immensely in all of my roles. I enjoy tackling complex problems and crafting innovative solutions. <br><br>
-                    If you like what you see, feel free to check out my resume or reach out to me directly! I am looking forward to hearing from you! 
+                        I’m Deyan, a Software Engineer based in the Greater Saint Louis area. Originally from Bulgaria, I’ve called the United States home since 2012. <br><br>
+                        I specialize in Front-end development with JavaScript and React, but my expertise goes beyond just that. 
+                        I also have a strong background in back-end work, as showcased by my professional experience and personal projects. <br><br>
+                        My philosophy is simple: “Never get comfortable, always challenge yourself.” This mindset has driven my growth across all my roles. 
+                        I thrive on tackling complex problems and creating innovative solutions. <br><br>
+                        If you like what you see, feel free to reach out to me. I look forward to connecting with you!
                     </p> <br>
                     <a target="_blank" class="btn-live" aria-label="Opens resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Download CV <i class="fa-solid fa-download"></i></a>
                 </div>
@@ -225,7 +223,7 @@
                     <p>
                         Commercio Orders is a CRM platform for Promotional Products Industry distributors. Users are able to source competitively-priced 
                         products, manage quotes, and send purchase orders with less back and forth with the suppliers, all in one system...
-                        <button onclick="openModal('orders')" aria-label="Opens a dialog with more information" class="btn-see-more">See more</button>
+                        <button onclick="openModal('orders')" aria-label="Opens a dialog with more information" class="btn-see-more">see more</button>
                     </p>
                     <a target="_blank" class="btn-live" aria-label="Opens Orders Demo website in new tab" href="https://commercio.com/order-management">Demo <i class="fa-solid fa-link"></i></a>
                     <a target="_blank" class="btn-live" aria-label="Opens Orders Knowledge Base website in new tab" href="https://commerciosupport.zendesk.com/hc/en-us">Knowledge base <i class="fa-solid fa-link"></i></a>
@@ -260,7 +258,7 @@
                     <p>
                         Thai Sport Bodyworks is San Diego's premier massage/sports therapy center.
                         We’re a next generation wellness business that provides everything you need to get you moving at your best — no matter where you’re at today...
-                        <button onclick="openModal('thai')" aria-label="Opens a dialog with more information" class="btn-see-more">See more</button>
+                        <button onclick="openModal('thai')" aria-label="Opens a dialog with more information" class="btn-see-more">see more</button>
                     </p>
                     <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://www.thaisportmassage.com/">Website <i class="fa-solid fa-link"></i></a>
                 </div>
@@ -298,7 +296,7 @@
                     <p>
                         Frog Feast is a browser-based game I built in 7 days where you are a frog, eating bugs for a high score. 
                         Winner of the Mintbean Star Award for "exemplary achievement in the field of web development"...
-                        <button onclick="openModal('frog')" aria-label="Opens a dialog with more information" class="btn-see-more">See more</button>
+                        <button onclick="openModal('frog')" aria-label="Opens a dialog with more information" class="btn-see-more">see more</button>
                     </p>
                     <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/">Website <i class="fa-solid fa-link"></i></a>
                     <a target="_blank" class="btn-source" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast">Source code <i class="fa-solid fa-link"></i></a>
@@ -373,7 +371,7 @@
                             <p class="project-description">
                                 Commercio Orders is a CRM platform for Promotional Products Industry distributors. Users are able to source competitively-priced 
                                 products, manage quotes, and send purchase orders with less back and forth with the suppliers, all in one system... 
-                                <button onclick="openModal('orders')" aria-label="Opens a dialog with more information" class="btn-see-more">See more</button>
+                                <button onclick="openModal('orders')" aria-label="Opens a dialog with more information" class="btn-see-more">see more</button>
                             </p>
                             <a target="_blank" class="btn-live" aria-label="Opens Orders Demo website in new tab" href="https://commercio.com/order-management">Demo <i class="fa-solid fa-link"></i></a>
                             <a target="_blank" class="btn-live" aria-label="Opens Orders Knowledge Base website in new tab" href="https://commerciosupport.zendesk.com/hc/en-us">Knowledge base <i class="fa-solid fa-link"></i></a>
@@ -410,7 +408,7 @@
                             <p class="project-description">
                                 Thai Sport Bodyworks is San Diego's premier massage/sports therapy center.
                                 We’re a next generation wellness business that provides everything you need to get you moving at your best — no matter where you’re at today...
-                                <button onclick="openModal('thai')" aria-label="Opens a dialog with more information" class="btn-see-more">See more</button>
+                                <button onclick="openModal('thai')" aria-label="Opens a dialog with more information" class="btn-see-more">see more</button>
                             </p>
                             <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://www.thaisportmassage.com/">Website <i class="fa-solid fa-link"></i></a>
                     </div>
@@ -451,7 +449,7 @@
                             <p class="project-description">
                                 Frog Feast is a browser-based game I built in 7 days where you are a frog, eating bugs for a high score. 
                                 Winner of the Mintbean Star Award for "exemplary achievement in the field of web development"...
-                                <button onclick="openModal('frog')" aria-label="Opens a dialog with more information" class="btn-see-more">See more</button>
+                                <button onclick="openModal('frog')" aria-label="Opens a dialog with more information" class="btn-see-more">see more</button>
                             </p>
                             <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/">Website <i class="fa-solid fa-link"></i></a>
                             <a target="_blank" class="btn-source" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast">Source code <i class="fa-solid fa-link"></i></a>
@@ -467,32 +465,22 @@
     <div id="modal-orders" class="modal-overlay" aria-label="Close modal" onclick="closeModal('orders')">
         <div class="modal">
             <div class="modal-header">
-                <h3>Commercio Orders</h3>
                 <button class="modal-close" onclick="closeModal('orders')"><i class="fa-solid fa-circle-xmark"></i></button>
             </div>
             <div class="modal-content">
-                <div class="modal-img-container">
-                    <img alt="Screenshot of Commercio Orders" src="./images/orders.png">
-                </div>
+                <i class="fa-solid fa-circle-info"></i>
                 <p>
-                    I joined this project as a Front-End Engineer, working with React, Node, TypeScript, Material UI, and Redux/Recoil. 
-                    I later transitioned to a Full-Stack Engineer role, using C# and Microsoft SQL Server to enhance team efficiency, accelerate feature rollouts, 
-                    and save significant development costs.
+                    Commercio Orders is a comprehensive CRM platform designed for distributors in the promotional products industry. 
+                    It allows users to efficiently source competitively priced items, manage quotes, and streamline purchase orders — all within a single system, 
+                    reducing communication hurdles with suppliers.
                 </p>
                 <p>
-                    Throughout my tenure, I contributed to nearly every feature, as well as taking full ownership from creation to maintenance on a number of them. 
-                    I also played a key role in developing SDK tooling, by creating reusable hooks and components that standardized user experience and 
-                    reduced development time. I also increased app-wide test coverage by 22% using React Testing Library.
+                    With a rich catalog of over 10,000 products from various vendors, users can handle every aspect of their business. 
+                    Aside from order management, the application also offers tax automation, supplier and industry credentials management, invoicing, and more.
                 </p>
                 <p>
-                    Additionally, I demonstrated leadership by spearheading the overhaul of the Order Configuration and Invoicing features, 
-                    resulting in improved code readability, scalability, and performance, while reducing the codebase size and 
-                    fixing numerous TypeScript errors and hidden bugs.
+                    Other helpful features include comprehensive dashboards for reporting and a task manager to help users stay organized.
                 </p>
-            </div>
-            <div class="modal-actions">
-                <a target="_blank" class="btn-live" aria-label="Opens Orders Demo website in new tab" href="https://commercio.com/order-management">Demo <i class="fa-solid fa-link"></i></a>
-                <a target="_blank" class="btn-live" aria-label="Opens Orders Knowledge Base website in new tab" href="https://commerciosupport.zendesk.com/hc/en-us">Knowledge base <i class="fa-solid fa-link"></i></a> 
             </div>
         </div>
     </div> 
@@ -500,28 +488,16 @@
     <div id="modal-thai" class="modal-overlay" aria-label="Close modal" onclick="closeModal('thai')">
         <div class="modal">
             <div class="modal-header">
-                <h3>Thai Sport Bodyworks - Official website</h3>
                 <button class="modal-close" onclick="closeModal('orders')"><i class="fa-solid fa-circle-xmark"></i></button>
             </div>
             <div class="modal-content">
-                <div class="modal-img-container">
-                    <img alt="Screenshot of Thai Sport Bodyworks" src="./images/thai.png">
-                </div>
+                <i class="fa-solid fa-circle-info"></i>
                 <p>
-                    I joined this project to deliver a comprehensive UI makeover using Webflow, HTML, CSS, and JavaScript, collaborating closely with the owner. 
-                    My goal was to create a modern design that would engage users and boost conversion rates.
+                    Thai Sport Bodyworks is San Diego's premier massage/sports therapy center, boasting 3 locations and 900+ five star reviews.
                 </p>
                 <p>
-                    One of my key contributions was designing the new homepage, which remains a cornerstone of the final product. 
-                    I also implemented a CMS to manage the blog functionality and more. 
+                    The official website provides convenient access to information about services, online bookings, staff portal, blog, and more.
                 </p>
-                <p>
-                    In addition to these tasks, I ensured the project met accessibility standards, maintained responsiveness, and achieved cross-browser compatibility. 
-                    I also leveraged my expertise to suggest additional UX improvements.
-                </p>
-            </div>
-            <div class="modal-actions">
-                <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://www.thaisportmassage.com/">Website <i class="fa-solid fa-link"></i></a>
             </div>
         </div>
     </div> 
@@ -529,15 +505,12 @@
     <div id="modal-frog" class="modal-overlay" aria-label="Close modal" onclick="closeModal('frog')">
         <div class="modal">
             <div class="modal-header">
-                <h3>Frog Feast</h3>
                 <button class="modal-close" onclick="closeModal('frog')"><i class="fa-solid fa-circle-xmark"></i></button>
             </div>
             <div class="modal-content">
-                <div class="modal-img-container">
-                    <img alt="Screenshot of Frog Feast" src="./images/frog.png">
-                </div>
+                <i class="fa-solid fa-circle-info"></i>
                 <p>
-                    This was my entry for the August Hiring Hackathon of 2021, hosted by Mintbean.
+                    Frog Feast was my entry for the August Hiring Hackathon of 2021, hosted by Mintbean.
                 </p>
                 <p>
                     I joined the competition as a solo-dev (we had the option of teaming up with others) and spent the next week prototyping 
@@ -546,10 +519,6 @@
                 <p>
                     I hope to one day port this over to a fully mobile experience (with original sprites of course). But until then, enjoy the browser version!
                 </p>
-            </div>
-            <div class="modal-actions">
-                <a target="_blank" class="btn-live" aria-label="Opens website in new tab" href="https://lemonstener.github.io/frog-feast/">Website <i class="fa-solid fa-link"></i></a>
-                <a target="_blank" class="btn-source" aria-label="Opens GitHub repository in new tab" href="https://github.com/lemonstener/frog-feast">Source code <i class="fa-solid fa-link"></i></a>
             </div>
         </div>
     </div> 
