update modal content markup and padding

--- a/index.html
+++ b/index.html
@@ -472,13 +472,9 @@
                 <p>
                     Commercio Orders is a comprehensive CRM platform designed for distributors in the promotional products industry. 
                     It allows users to efficiently source competitively priced items, manage quotes, and streamline purchase orders — all within a single system, 
-                    reducing communication hurdles with suppliers.
-                </p>
-                <p>
+                    reducing communication hurdles with suppliers. <br><br>
                     With a rich catalog of over 10,000 products from various vendors, users can handle every aspect of their business. 
-                    Aside from order management, the application also offers tax automation, supplier and industry credentials management, invoicing, and more.
-                </p>
-                <p>
+                    Aside from order management, the application also offers tax automation, supplier and industry credentials management, invoicing, and more. <br><br>
                     Other helpful features include comprehensive dashboards for reporting and a task manager to help users stay organized.
                 </p>
             </div>
@@ -493,9 +489,7 @@
             <div class="modal-content">
                 <i class="fa-solid fa-circle-info"></i>
                 <p>
-                    Thai Sport Bodyworks is San Diego's premier massage/sports therapy center, boasting 3 locations and 900+ five star reviews.
-                </p>
-                <p>
+                    Thai Sport Bodyworks is San Diego's premier massage/sports therapy center, boasting 3 locations and 900+ five star reviews. <br><br>
                     The official website provides convenient access to information about services, online bookings, staff portal, blog, and more.
                 </p>
             </div>
@@ -510,13 +504,9 @@
             <div class="modal-content">
                 <i class="fa-solid fa-circle-info"></i>
                 <p>
-                    Frog Feast was my entry for the August Hiring Hackathon of 2021, hosted by Mintbean.
-                </p>
-                <p>
+                    Frog Feast was my entry for the August Hiring Hackathon of 2021, hosted by Mintbean. <br><br>
                     I joined the competition as a solo-dev (we had the option of teaming up with others) and spent the next week prototyping 
-                    and coding a fun and addictive gameplay-loop.
-                </p>
-                <p>
+                    and coding a fun and addictive gameplay-loop. <br><br>
                     I hope to one day port this over to a fully mobile experience (with original sprites of course). But until then, enjoy the browser version!
                 </p>
             </div>
