remove info icons

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 <button class="modal-close" onclick="closeModal('orders')"><i class="fa-solid fa-circle-xmark"></i></button>
             </div>
             <div class="modal-content">
-                <i class="fa-solid fa-circle-info"></i>
+                <!-- <i class="fa-solid fa-circle-info"></i> -->
                 <p>
                     Commercio Orders is a comprehensive CRM platform designed for distributors in the promotional products industry. 
                     It allows users to efficiently source competitively priced items, manage quotes, and streamline purchase orders — all within a single system, 
@@ -487,7 +487,7 @@
                 <button class="modal-close" onclick="closeModal('orders')"><i class="fa-solid fa-circle-xmark"></i></button>
             </div>
             <div class="modal-content">
-                <i class="fa-solid fa-circle-info"></i>
+                <!-- <i class="fa-solid fa-circle-info"></i> -->
                 <p>
                     Thai Sport Bodyworks is San Diego's premier massage/sports therapy center, boasting 3 locations and 900+ five star reviews. <br><br>
                     The official website provides convenient access to information about services, online bookings, staff portal, blog, and more.
@@ -502,7 +502,7 @@
                 <button class="modal-close" onclick="closeModal('frog')"><i class="fa-solid fa-circle-xmark"></i></button>
             </div>
             <div class="modal-content">
-                <i class="fa-solid fa-circle-info"></i>
+                <!-- <i class="fa-solid fa-circle-info"></i> -->
                 <p>
                     Frog Feast was my entry for the August Hiring Hackathon of 2021, hosted by Mintbean. <br><br>
                     I joined the competition as a solo-dev (we had the option of teaming up with others) and spent the next week prototyping 
