replace x with close button

--- a/index.html
+++ b/index.html
@@ -464,43 +464,33 @@
 
     <div id="modal-orders" class="modal-overlay" aria-label="Close modal" onclick="closeModal('orders')">
         <div class="modal">
-            <div class="modal-header">
-                <button class="modal-close" onclick="closeModal('orders')"><i class="fa-solid fa-circle-xmark"></i></button>
-            </div>
             <div class="modal-content">
                 <!-- <i class="fa-solid fa-circle-info"></i> -->
                 <p>
-                    Commercio Orders is a comprehensive CRM platform designed for distributors in the promotional products industry. 
-                    It allows users to efficiently source competitively priced items, manage quotes, and streamline purchase orders — all within a single system, 
-                    reducing communication hurdles with suppliers. <br><br>
-                    With a rich catalog of over 10,000 products from various vendors, users can handle every aspect of their business. 
-                    Aside from order management, the application also offers tax automation, supplier and industry credentials management, invoicing, and more. <br><br>
-                    Other helpful features include comprehensive dashboards for reporting and a task manager to help users stay organized.
+                    Commercio Orders is a CRM platform for Promotional Products Industry distributors. Users are able to source competitively-priced 
+                    products, manage quotes, and send purchase orders with less back and forth with the suppliers, all in one system. <br><br>
+                    Features include a robust product catalog, tax automation, supplier and industry credentials management, invoicing, dashboards, and more.
                 </p>
+                <button class="btn-source" onclick="closeModal('orders')">Close</button>
             </div>
         </div>
     </div> 
 
     <div id="modal-thai" class="modal-overlay" aria-label="Close modal" onclick="closeModal('thai')">
         <div class="modal">
-            <div class="modal-header">
-                <button class="modal-close" onclick="closeModal('orders')"><i class="fa-solid fa-circle-xmark"></i></button>
-            </div>
             <div class="modal-content">
                 <!-- <i class="fa-solid fa-circle-info"></i> -->
                 <p>
                     Thai Sport Bodyworks is San Diego's premier massage/sports therapy center, boasting 3 locations and 900+ five star reviews. <br><br>
                     The official website provides convenient access to information about services, online bookings, staff portal, blog, and more.
                 </p>
+                <button class="btn-source" onclick="closeModal('thai')">Close</button>
             </div>
         </div>
     </div> 
 
     <div id="modal-frog" class="modal-overlay" aria-label="Close modal" onclick="closeModal('frog')">
         <div class="modal">
-            <div class="modal-header">
-                <button class="modal-close" onclick="closeModal('frog')"><i class="fa-solid fa-circle-xmark"></i></button>
-            </div>
             <div class="modal-content">
                 <!-- <i class="fa-solid fa-circle-info"></i> -->
                 <p>
@@ -509,6 +499,7 @@
                     and coding a fun and addictive gameplay-loop. <br><br>
                     I hope to one day port this over to a fully mobile experience (with original sprites of course). But until then, enjoy the browser version!
                 </p>
+                <button class="btn-source" onclick="closeModal('frog')">Close</button>
             </div>
         </div>
     </div> 
